syntax = "proto3";

package project.models;

option go_package = "projectpb";

message Project {
    string PID = 1;
    string Name = 2;
    string CreationDate = 3;
    string Category = 4;
    string Description = 5;
    string School = 6;
    Location Location = 7;
    repeated string Tags = 8;
    string Avatar = 9;
    string Banner = 10;
    string CustomURL = 11;
    repeated Member ListFollowers = 12;
    repeated string SkillsNeeded = 13;
    repeated string Links = 14;
    repeated string JoinRequests = 15;
}

message Member {
    string UUID = 1;
    string RoleName = 2;
    string JoinDate = 3;
}

message Location {
    string Country = 1;
    string State = 2;
    string City = 3;
    string Zip = 4;
}

message Role {
    string Name = 1;
    bool ManageMembers = 2;
	bool ChangeIcon = 3;
	bool ChangeBanner = 4;
	bool ManageEntries = 5;
	bool ManageLinks = 6;
	bool ManageTags  = 7;
}



