syntax="proto3";

package project.service;

// import "models.proto";
import "models.proto";

option go_package = "projectpb"; 

service Project {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Pull(PullRequest) returns (PullResponse);
  rpc Lite(LiteRequest) returns (LiteResponse);
  rpc Lookup(LookupRequest) returns (LookupResponse);
  rpc Search(SearchRequest) returns (SearchResponse);
  rpc GetApplicants(GetApplicantsRequest) returns (GetApplicantsResponse);
  rpc GetRoles(GetRolesRequest) returns (GetRolesResponse);
  rpc AddMember(AddMemberRequest) returns (AddMemberResponse);
}



message Empty{}

message RegisterRequest{
  string CreatorID = 1;
  string CustomURL = 2;
  string Name = 3;
  string Description = 4;
  string School = 5;
  string Avatar = 6;
}

message RegisterResponse{
  string ProjectID = 1;
}

message PullRequest{
  string CustomURL = 1;
}

message PullResponse{
  project.models.Project ProjectPage = 1;
}

message LiteRequest{
  string ProjectID = 1;
}

message LiteResponse{
  string PID = 1;
  string CustomURL = 2;
  string Name = 3;
  string Description = 4;
  string Avatar = 5;
}

message LookupRequest{
  string CustomURL = 1;
}
  
message LookupResponse{
  bool Exists = 1;
}

message SearchRequest{
  string Query = 1;
  string Filters = 2;
  string Scroll = 3;
  //etc...
}
  
message SearchResponse{
  repeated LiteResponse Results = 1;
}

message GetApplicantsRequest{
  string RequesterID = 1;
  string ProjectID = 2;
}

message GetApplicantsResponse{
  repeated string ApplicantIDs = 1;
}

message GetRolesRequest{
  string ProjectID = 1;
  string UserID = 2;
}

message GetRolesResponse{
  repeated project.models.Role Roles = 1;
}

message AddMemberRequest{
  string ProjectID = 1;
  string AdderID = 2;
  string NewMemberID = 3;
  string RoleName = 4;
}

message AddMemberResponse{}